--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.zhihu.android:matisse:0.5.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.yanzhenjie:permission:2.0.0-rc12'
 }
